# kl-transit-tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  scheduler.py
backend/app/api/: disruptions.py  lines.py  lines_stats.py  news.py  reliability.py  vehicles.py  ws_positions.py
backend/app/gtfs/: rt_client.py  static_loader.py
backend/app/ingestion/: disruption.py  ktmb.py  rapid_rail_sim.py  state.py
backend/app/news/: classifier.py  scrapers.py
backend/app/reliability/: observer.py  rollup.py
docker/: README.md  entrypoint.sh  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: DisruptionBanner.tsx
frontend/src/components/Map/: Legend.tsx  LineLayer.tsx  TrainsPanel.tsx  VehicleDots.tsx  VehicleDrawer.tsx
frontend/src/hooks/: usePositionsWS.ts
frontend/src/pages/: MapView.tsx  News.tsx  Reliability.tsx
scripts/: bootstrap_static.py  dev.ps1  seed_demo.py
