[project]
name = "kl-transit-tracker-backend"
version = "0.1.0"
description = "Local FastAPI backend for the KL Transit Tracker dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "gtfs-realtime-bindings>=1.0",
    "protobuf>=4.25",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
